STYLE: displays bg image on startup, started on left/right buttons in corners

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -42,7 +42,6 @@ body {
  *      CODE START
  *======================*/
 
-/* TODO: apply grid to rest */
 /* ! Apply one other requirement */
 /* ! Create a FITTING title */
 
@@ -56,6 +55,39 @@ body {
 body {
     > div {
         position: relative;
+
+        /* !Dont forget to end up putting this in  the 'checked' thing so it only runs when the device is on */
+        /* TODO: on hover, change style query for background. */
+        /* TODO: have mario come walking in from the left of the screen. */
+        div[data-element="L"] {
+            background: blue;
+            width: 20px;
+            height: 20px;
+            top: 0;
+            left: 0;
+            position: absolute;
+            border-radius: 60%;
+            transition: 1s ease;
+
+            &:hover {
+                background-color: red;
+            }
+        }
+
+        div[data-element="R"] {
+            background: blue;
+            width: 20px;
+            height: 20px;
+            top: 0;
+            right: 0;
+            position: absolute;
+            border-radius: 60%;
+            transition: 1s ease;
+
+            &:hover {
+                background-color: red;
+            }
+        }
 
         > img[src="./assets/svgs/psp-foreground.svg"] {
             width: 100%;
@@ -231,6 +263,12 @@ body > div > div > div:nth-child(3) {
         grid-column-end: 4;
         height: 100%;
         width: 100%;
+
+        img {
+            padding: 1em;
+            width: 60%;
+            opacity: 0.75;
+        }
     }
 
     > div:nth-child(2) {
@@ -412,7 +450,8 @@ body
 body:has(div:nth-child(3) div:nth-child(3) label:first-child > input:checked)
     div[data-element="screen"] {
     animation: screen 5s ease;
-    background: blue;
+    background-image: url(../assets/images/background.png);
+
     h1 {
         animation: title 5s ease;
     }
